--- a/Source Code/CSS/style.css
+++ b/Source Code/CSS/style.css
@@ -24,7 +24,8 @@ main {
 /*  Text Properties   */
 .input-box {
     margin: 3em auto;
-    width: 50%;
+    margin-left: 9em;
+    width: 45%;
     border-bottom: 5px solid #6cdbeb;
 }
 
@@ -45,11 +46,11 @@ main {
     font-size: 25px;
     color: #30b69d;
     position: absolute;
-    left: 19%;
+    left: 23%;
 }
 
 .login-btn {
-    width: 40%;
+    width: 45%;
     height: 4em;
     border-radius: 2em;
     border:  4px solid #6cdbeb;
