--- a/Source Code/CSS/dashboardstyle.css
+++ b/Source Code/CSS/dashboardstyle.css
@@ -9,9 +9,9 @@
     --color-success: #25d15e;
     --color-warning: #f3e13c;
     --color-white: #fff;
-    --color-info-dark: #30a0b1;;
+    --color-info-dark: #49666b;;
     --color-info-light: #dce1eb;
-    --color-dark: #000;
+    --color-dark: rgb(20, 17, 17);
     --color-light: rgba(132, 139, 200, 0.18);
     --color-info-light: #dce1eb;
     --color-primary-variant: #111e88;
@@ -26,7 +26,7 @@
     --card-padding: 1.8rem;
     --padding-1: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(var(--color-light));
+    --box-shadow: 0 2rem 3rem var(--color-light);
 }
 /* General Properties */
 * {
@@ -60,6 +60,7 @@ body {
     background: var(--color-background);
     user-select: none;
     overflow: hidden;
+    color: var(--color-dark);
 }
 
 a {
@@ -164,7 +165,7 @@ aside .close {
 aside .sidebar {
     display: flex;
     flex-direction: column;
-    width: 17vw;
+    width: 16vw;
     height: 86vh;
     position: relative;
     top: 3rem;
@@ -177,7 +178,7 @@ aside h3 {
 aside .sidebar a {
     display: flex;
     color: var(--color-info-dark);
-    margin-left: 2rem;
+    margin-left: 1rem;
     gap: 1rem;
     align-items: center;
     position: relative;
@@ -220,4 +221,84 @@ aside .sidebar a:hover {
 
 aside .sidebar a:hover span {
     margin-left: 1rem;
+}
+/*  Start of Main  */
+main {
+    margin-top: 1.4rem;
+}
+
+main .date {
+    display: inline-block;
+    background: var(--color-light);
+    border-radius: var(--border-radius-1);
+    margin-top: 1rem;
+    padding: 0.5rem 1.6rem;
+}
+
+main .date input[type="date"] {
+    background: transparent;
+    color: var(--color-dark);
+}
+
+main .insights {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+}
+
+main .insights > div {
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+main .insights > div:hover {
+    box-shadow: none;
+}
+
+main .insights > div span {
+    background: var(--color-success);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: var(--color-white);
+    font-size: 2rem;
+}
+
+main .insights > div.stock span {
+    background: var(--color-primary);
+}
+
+main .insights > div.reservation span {
+    background: var(--color-danger);
+}
+
+main .insights > div .middle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .insights h3 {
+    margin: 1rem 0 0.6rem;
+    font-size: 1rem;
+}
+
+main .insights .progress {
+    position: relative;
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
+}
+
+main .insights svg {
+    width: 7rem;
+    height: 7rem;
+    margin-left: 1em;
+}
+
+main .insights .number {
+    text-align: center;
 }
