--- a/Source Code/CSS/dashboardstyle.css
+++ b/Source Code/CSS/dashboardstyle.css
@@ -315,10 +315,9 @@ main .insights .number {
 
 .listoftrans {
     background: var(--color-white);
-    padding: var(--card-padding);
+    padding: 1em;
     height: 35vh;
     border-radius: var(--card-border-radius);
-    margin-top: 1rem;
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
 }
@@ -328,6 +327,31 @@ main .insights .number {
 }
 
 /*  Table Transaction  */
-table {
-    padding: var(--fs-text1);
+.content-table {
+    border-collapse: collapse;
+    font-size: 1em;
+    width: 100%;
+}
+
+.content-table thead tr {
+    background-color: var(--color-primary);
+    color: var(--color-background);
+    text-align: left;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.content-table th:first-child {
+    border-top-left-radius: 15px;
+}
+
+
+.content-table th:last-child {
+    border-top-right-radius: 15px;
+}
+
+.content-table th,
+.content-table td {
+    padding: 12px 15px;
+    border-bottom: 1px solid rgb(238, 233, 233);
 }
