--- a/Source Code/CSS/dashboardstyle.css
+++ b/Source Code/CSS/dashboardstyle.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Questrial&display=swap');
 
-
 /*  Custom Properties  */
 
 :root {
@@ -20,8 +19,8 @@
 
     --card-border-radius: 2rem;
     --border-radius-1: 0.4rem;
-    --border-radius-1: 0.8rem;
-    --border-radius-1: 1.2rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
 
     --card-padding: 1.8rem;
     --padding-1: 1.2rem;
@@ -355,3 +354,116 @@ main .insights .number {
     padding: 12px 15px;
     border-bottom: 1px solid rgb(238, 233, 233);
 }
+
+/* Start of Right */
+.right {
+    margin-top: 1.4rem;
+}
+
+.right .top {
+    display: flex;
+    gap: 1rem;
+}
+
+.right .top button {
+    display: none;
+}
+
+.right .theme-toggler {
+    background: var(--color-info-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.2rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-2);
+}
+
+.right .theme-toggler span {
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right .theme-toggler span.active {
+    background: var(--color-primary);
+    color: rgb(255, 255, 255);
+    border-radius: var(--border-radius-2);
+}
+
+.right .top .profile {
+    display: flex;
+    gap: 2rem;
+    text-align: right;
+}
+
+.right .top .profile p {
+    font-size: var(--fs-text2);
+}
+
+/*  Date  */
+.rectangle-border {
+    background: linear-gradient(to right bottom, 
+    rgba(157, 237, 243, 0.9), 
+    rgba(42, 160, 173, 0.9)
+    );
+    height: 1rem;
+    width: 90%;
+    border-radius: 10px;
+    margin: 1em auto;
+}
+
+.datetoday {
+    background: var(--color-white);
+    padding: 1em;
+    height: 25vh;
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+    margin: 1em;
+}
+
+.datetoday span {
+    background: var(--color-warning);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: var(--color-white);
+    font-size: 1.5rem;
+}
+
+.datetoday:hover {
+    box-shadow: none;
+}
+
+.date-today {
+    margin: .5em;
+    font-size: var(--fs-text1);
+    font-weight: bolder;
+}
+
+/* Schedule */
+.schedinfo {
+    background: var(--color-white);
+    height: 46vh;
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+    margin: 1em;
+}
+
+.schedinfo:hover {
+    box-shadow: none;
+}
+
+
+
+
+
+
+
+
+
