--- a/Source Code/CSS/dashboardstyle.css
+++ b/Source Code/CSS/dashboardstyle.css
@@ -31,6 +31,18 @@
 
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
+/*  DARK MODE  */
+.dark-mode-variables {
+    --color-background: #181a1e;
+    --color-white: #202528;
+    --color-dark: #edeffd;
+    --color-dark-variant: #a3bdcc;
+    --color-light: rgba(0, 0, 0, 0.4);
+    --box-shadow: 0 2rem 3rem var(--color-light)
+}
+
+
+
 /* General Properties */
 * {
     margin: 0;
@@ -203,7 +215,7 @@ aside .sidebar a:last-child {
 aside .sidebar a.active {
     background: var(--color-light);
     color: var(--color-primary);
-    margin-left: 0%;
+    margin-left: -8%;
 }
 
 aside .sidebar a.active::before {
@@ -216,7 +228,7 @@ aside .sidebar a.active::before {
 aside .sidebar a.active span {
     color: var(--color-primary);
     margin-left: calc(1rem - 3px);
-}
+} 
 
 aside .sidebar a:hover {
     color: var(--color-primary);
@@ -315,7 +327,7 @@ main .insights .number {
 .listoftrans {
     background: var(--color-white);
     padding: 1em;
-    height: 35vh;
+    height: 45vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -377,7 +389,7 @@ main .insights .number {
     height: 1.6rem;
     width: 4.2rem;
     cursor: pointer;
-    border-radius: var(--border-radius-2);
+    border-radius: var(--border-radius-1);
 }
 
 .right .theme-toggler span {
@@ -448,7 +460,7 @@ main .insights .number {
 /* Schedule */
 .schedinfo {
     background: var(--color-white);
-    height: 46vh;
+    height: 40vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -460,6 +472,165 @@ main .insights .number {
 }
 
 
+/*  Media Queries  */
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 94%;
+        grid-template-columns: 7rem auto 23rem;
+    }
+
+    aside .logo h2 {
+        display: none;
+    }
+
+    aside .sidebar h3 {
+        display: none;
+    }
+
+    aside .sidebar a {
+        width: 5.6rem;
+    }
+
+    aside .sidebar a:last-child {
+        position: relative;
+        margin-top: 5rem;
+    }
+
+    main .insights {
+        grid-template-columns: 1fr;
+    }
+
+    main .listoftrans {
+        width: 96%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 2rem 0 0 10rem;
+    }
+
+    main .listoftrans table {
+        width: 83vw;
+    }
+
+    main table thead tr td:last-child,
+    main table thead tr td:first-child {
+        display: none;
+    }
+
+    main table tbody tr td:last-child,
+    main table tbody tr td:first-child {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+        grid-template-columns: 1fr;
+    }
+
+    aside {
+        position: fixed;
+        left: -100;
+        background: var(--color-white);
+        width: 15rem;
+        z-index: 3;
+        box-shadow: 1rem 3rem 4rem var(--color-light);
+        height: 100vh;
+        padding: var(--card-padding);
+        display: none;
+        animation: showMenu 800ms ease forwards;
+    }
+
+    @keyframes showMenu {
+        to {
+            left: 0;
+        }
+    }
+
+    aside .logo h2 {
+        display: inline;
+    }
+
+    aside .sidebar h3 {
+        display: inline;
+    }
+
+    aside .sidebar a {
+        width: 100%;
+        height: 3.4rem;
+    }
+
+    aside .sidebar a:last-child {
+        position: absolute;
+        bottom: 5rem;
+    }
+
+    aside .close {
+        display: inline-block;
+        cursor: pointer;
+        margin-right: .8rem;
+    }
+
+    main {
+        margin-top: 8rem;
+        padding: 0 1rem;
+    }
+
+    main .listoftrans {
+        position: relative;
+        margin: 3rem 0 0 0;
+        width: 100%;
+    }
+
+    main .listoftrans table {
+        width: 100%;
+        margin: 0;
+    }
+
+    .right {
+        width: 94%;
+        margin: 0 auto 4rem;
+    }
+
+    .right .top {
+        position: fixed;
+        top: 0;
+        left: 0;
+        align-items: center;
+        justify-content: end;
+        padding: 0 1rem;
+        height: 4.6rem;
+        background: var(--color-white);
+        width: 100%;
+        margin: 0;
+        z-index: 2;
+        box-shadow: 0 1rem 1rem var(--color-light);
+    }
+
+    .right .top .theme-toggler {
+        width: 4.4rem;
+        position: absolute;
+        left: 66%;
+    }
+
+    .right .profile .info {
+        display: none;
+    }
+
+    .right .top button {
+        display: inline-block;
+        background:  transparent;
+        cursor: pointer;
+        color: var(--color-dark);
+        position: absolute;
+        left: 1rem;
+    }
+
+    .right .top button span {
+        font-size: 2rem;
+    }
+}
 
 
 
