--- a/Source Code/css/loginform.css
+++ b/Source Code/css/loginform.css
@@ -109,6 +109,7 @@ main {
     width: 60%;
     border-radius: 5px;
     text-align: center;
+    font-family: poppins, sans-serif;
 }
 
 .error:hover {
