--- a/Source Code/css/profile.css
+++ b/Source Code/css/profile.css
@@ -32,7 +32,7 @@
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
 /*  DARK MODE  */
-.dark-mode-variables {
+.darkmode {
     --color-background: #181a1e;
     --color-white: #202528;
     --color-dark: #edeffd;
@@ -244,7 +244,7 @@ main .insights {
     gap: 1.6rem;
 }
 
-main .insights > div {
+main .insights {
     background: var(--color-white);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
@@ -253,11 +253,11 @@ main .insights > div {
     transition: all 300ms ease;
 }
 
-main .insights > div:hover {
+main .insights :hover {
     box-shadow: none;
 }
 
-main .insights > div span {
+main .insights span {
     background: var(--color-success);
     padding: 0.5rem;
     border-radius: 50%;
@@ -265,42 +265,19 @@ main .insights > div span {
     font-size: 2rem;
 }
 
-main .insights > div.stock span {
+main .insights .stock span {
     background: var(--color-primary);
 }
 
-main .insights > div.reservation span {
+main .insights .reservation span {
     background: var(--color-danger);
 }
 
-main .insights > div .middle {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
 
 main .insights h3 {
     margin: 1rem 0 0.6rem;
     font-size: 1rem;
 }
-
-main .insights .progress {
-    position: relative;
-    width: 92px;
-    height: 92px;
-    border-radius: 50%;
-}
-
-main .insights svg {
-    width: 7rem;
-    height: 7rem;
-    margin-left: 1em;
-}
-
-main .insights .number {
-    text-align: center;
-}
-
 
 /*  Section Transaction  */
 .tableaccountrecords {
@@ -310,7 +287,7 @@ main .insights .number {
 .accountrecords {
     background: var(--color-white);
     padding: 1em;
-    height: 45vh;
+    height: 41vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -360,11 +337,11 @@ main .insights .number {
     gap: 1rem;
 }
 
-.right .top button {
+#menu-btn {
     display: none;
 }
 
-.right .theme-toggler {
+.right #dark-mode-toggle {
     background: var(--color-info-light);
     display: flex;
     justify-content: space-between;
@@ -375,7 +352,7 @@ main .insights .number {
     border-radius: var(--border-radius-1);
 }
 
-.right .theme-toggler span {
+.right #dark-mode-toggle span {
     font-size: 1.2rem;
     width: 50%;
     height: 100%;
@@ -384,11 +361,7 @@ main .insights .number {
     justify-content: center;
 }
 
-.right .theme-toggler span .l {
-    background: var(--color-primary);
-}
-   
-.right .theme-toggler .d.active {
+.right #dark-mode-toggle span.active {
     background: var(--color-primary);
     color: rgb(255, 255, 255);
     border-radius: var(--border-radius-2);
@@ -567,7 +540,7 @@ main .insights .number {
         box-shadow: 0 1rem 1rem var(--color-light);
     }
 
-    .right .top .theme-toggler {
+    .right .top #dark-mode-toggle {
         width: 4.4rem;
         position: absolute;
         left: 66%;
