--- a/Source Code/css/useraccount.css
+++ b/Source Code/css/useraccount.css
@@ -32,7 +32,7 @@
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
 /*  DARK MODE  */
-.dark-mode-variables {
+.darkmode {
     --color-background: #181a1e;
     --color-white: #202528;
     --color-dark: #edeffd;
@@ -283,11 +283,11 @@ main {
     gap: 1rem;
 }
 
-.right .top button {
+#menu-btn {
     display: none;
 }
 
-.right .theme-toggler {
+.right #dark-mode-toggle {
     background: var(--color-info-light);
     display: flex;
     justify-content: space-between;
@@ -298,7 +298,7 @@ main {
     border-radius: var(--border-radius-1);
 }
 
-.right .theme-toggler span {
+.right #dark-mode-toggle span {
     font-size: 1.2rem;
     width: 50%;
     height: 100%;
@@ -306,12 +306,8 @@ main {
     align-items: center;
     justify-content: center;
 }
-
-.right .theme-toggler span .l {
-    background: var(--color-primary);
-}
    
-.right .theme-toggler .d.active {
+.right #dark-mode-toggle span.active {
     background: var(--color-primary);
     color: rgb(255, 255, 255);
     border-radius: var(--border-radius-2);
@@ -512,7 +508,7 @@ main {
         box-shadow: 0 1rem 1rem var(--color-light);
     }
 
-    .right .top .theme-toggler {
+    .right .top #dark-mode-toggle {
         width: 4.4rem;
         position: absolute;
         left: 66%;
