--- a/Source Code/css/useraccount.css
+++ b/Source Code/css/useraccount.css
@@ -232,21 +232,63 @@ main {
 .accountrecordsbg {
     background: var(--color-white);
     padding: 1em;
-    height: 41vh;
+    height: 40vh;
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
-    margin-bottom: 1em;
+    margin-bottom: .5em;
 }
 
 .accountrecordsbg:hover {
     box-shadow: none;
 }
 
+/*  Profile Form  */
+.formprofile {
+    padding: 1em;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    justify-content: end;
+    gap: 1.5em;
+}
+
+.formprofile div {
+    margin: 0 3em;
+}
+
+.formprofile input {
+    height: 4vh;
+    width: 15vw;
+    border: 1px solid var(--color-dark);
+    border-radius: var(--border-radius-2);
+    box-shadow: var(--box-shadow);
+}
+
+.formprofile span {
+    margin: 2em;
+}
+
+
+.profilepicture {
+    position: absolute;
+    height: 28vh;
+    width: 15vw;
+    border-radius: 50%;
+    margin-left: 3em;
+}
+
+.profilepicture span {
+    font-size: 200px;
+    color: var(--color-primary);
+}
+
+
+
 /*  Table Transaction  */
 .content-table {
     border-collapse: collapse;
-    font-size: 1em;
+    font-size: .93em;
     width: 100%;
 }
 
