--- a/Source Code/css/profile.css
+++ b/Source Code/css/profile.css
@@ -223,70 +223,40 @@ aside .sidebar a:hover span {
     margin-left: 1rem;
 }
 /*  Start of Main  */
-main {
-    margin-top: 1.4rem;
-}
-
-main .date {
-    display: inline-block;
-    background: var(--color-light);
-    border-radius: var(--border-radius-1);
-    margin-top: 1rem;
-    padding: 0.5rem 1.6rem;
-}
-
-main .date input[type="date"] {
-    background: transparent;
-    color: var(--color-dark);
-}
-
-main .insights {
+/*  Profile Form  */
+.formprofile {
+    padding: 1em;
+    height: 80%;
+    width: 90%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.6rem;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: end;
+    gap: 3em;
 }
 
-main .insights {
-    background: var(--color-white);
-    padding: var(--card-padding);
-    border-radius: var(--card-border-radius);
-    margin-top: 1rem;
+.formprofile input ,#ut {
+    height: 4vh;
+    width: 15vw;
+    border: 2px solid var(--color-primary);
+    border-radius: var(--border-radius-2);
     box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
+    background: var(--color-input-light);
+    margin: 0 2em;
+    color: var(--color-primary);
+    font-weight: bold;
+    text-align: center;
 }
 
-main .insights :hover {
-    box-shadow: none;
+.formprofile span {
+    position: absolute;
 }
-
-main .insights span {
-    background: var(--color-success);
-    padding: 0.5rem;
-    border-radius: 50%;
-    color: var(--color-white);
-    font-size: 2rem;
-}
-
-main .insights .stock span {
-    background: var(--color-primary);
-}
-
-main .insights .reservation span {
-    background: var(--color-danger);
-}
-
-
-main .insights h3 {
-    margin: 1rem 0 0.6rem;
-    font-size: 1rem;
-}
-
 /*  Section Transaction  */
-.tableaccountrecords {
+.tableprofile {
     margin-top: 1em;
 }
 
-.accountrecords {
+.table-profile {
     background: var(--color-white);
     padding: 1em;
     height: 41vh;
@@ -295,7 +265,7 @@ main .insights h3 {
     transition: all 300ms ease;
 }
 
-.accountrecords:hover {
+.table-profile:hover {
     box-shadow: none;
 }
 
@@ -424,20 +394,6 @@ main .insights h3 {
     font-weight: bolder;
 }
 
-/* Schedule */
-.schedinfo {
-    background: var(--color-white);
-    height: 40vh;
-    border-radius: var(--card-border-radius);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
-    margin: 1em;
-}
-
-.schedinfo:hover {
-    box-shadow: none;
-}
-
 
 /*  Media Queries  */
 @media screen and (max-width: 1200px) {
@@ -520,6 +476,11 @@ main .insights h3 {
     main {
         margin-top: 8rem;
         padding: 0 1rem;
+    }
+
+    
+    #menu-btn {
+        display: inline;
     }
 
     .right {
