--- a/Source Code/css/useraccount.css
+++ b/Source Code/css/useraccount.css
@@ -243,7 +243,7 @@ aside .sidebar a:hover span {
 }
 /*  Start of Main  */
 main {
-    margin-top: 1.4rem;
+    margin-top: 1rem;
 }
 /*  Section Account Records  */
 .tableaccountrecords {
@@ -768,6 +768,10 @@ main {
     main .listoftrans table {
         width: 100%;
         margin: 0;
+    }
+
+    #menu-btn {
+        display: inline;
     }
 
     .right {
